k8s/client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  selector:
    app: client
  ports:
    - port: 8080
      targetPort: 5173
  type: ClusterIP
